...
        rule("微信 / QQ", "com.tencent.mm", "com.tencent.mobileqq", "com.tencent.tim", sensitive = true, names = listOf("tencent"))
        rule("QQ 浏览器", "com.tencent.mtt", names = listOf("QQBrowser"))
        rule("腾讯 X5 内核", "com.tencent.mm", "com.tencent.mobileqq", "com.tencent.mtt", names = listOf(".tbs", "tbs"))
        rule("百度系应用", "com.baidu.searchbox", "com.baidu.BaiduMap", "com.baidu.netdisk", "com.baidu.input", "com.baidu.tieba", names = listOf("baidu", "BaiduMapSDKNew", "BaiduNetdisk"))
        rule("新浪微博", "com.sina.weibo", names = listOf("sina", "weibo"))
        rule("UC 浏览器", "com.UCMobile", names = listOf("UCDownloads", "UCMobile"))
        rule("支付宝", "com.eg.android.AlipayGphone", names = listOf("alipay"))
        rule("淘宝", "com.taobao.taobao", names = listOf("taobao"))
        rule("阿里系 SDK", "com.eg.android.AlipayGphone", "com.taobao.taobao", "com.tmall.wireless", "com.taobao.idlefish", names = listOf(".UTSystemConfig", "Alibaba"))
        rule("网易云音乐", "com.netease.cloudmusic", names = listOf("netease", "Netease"))
        rule("高德地图", "com.autonavi.minimap", names = listOf("amap", "autonavi"))
        rule("酷狗音乐", "com.kugou.android", names = listOf("kugou", "kgmusic"))
        rule("酷我音乐", "cn.kuwo.player", names = listOf("kuwo", "KuwoMusic"))
...
